--- a/hdo.cabal
+++ b/hdo.cabal
@@ -26,7 +26,7 @@ Library
                  , Network.DO.Droplets.Commands, Network.DO.Droplets.Net, Network.DO.Droplets.Utils
                  , Network.DO.IP, Network.DO.IP.Commands, Network.DO.IP.Net
                  , Network.DO.Domain, Network.DO.Domain.Commands, Network.DO.Domain.Net
-                 , Network.DO.Tags.Commands, Network.DO.Tags.Net
+                 , Network.DO.Tags, Network.DO.Tags.Commands, Network.DO.Tags.Net
                  , Network.DO.Names, Network.DO.Pairing
                  , Network.REST, Network.DO.Pretty
 
